--- a/src/Play.css
+++ b/src/Play.css
@@ -13,8 +13,19 @@
   border: 4px solid #ff00ff;
   box-shadow: 0px 0px 20px #ff00ff;
   max-width: 400px;
+  min-width: 308px;
   margin: auto;
   border-radius: 10px;
+}
+
+.score {
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Press Start 2P", cursive;
+  position: absolute;
+  top: 10px;
+  left: 20px;
 }
 
 .arcade-title {
